[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/enemy/RamEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/SS_drillEnemy2.png" type="Texture" id=2]
[ext_resource path="res://shader/Enemy_Shader.material" type="Material" id=3]
[ext_resource path="res://assets/audio/enemy/snd_enemy_hit2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/enemy/snd_enemy_dead3.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
height = 10.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125, 0.166667, 0.291667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ), Vector2( 6, 0 ), Vector2( 5, 0 ), Vector2( 5, 0 ), Vector2( 11, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.416667, 0.708333, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.333333, 0.416667, 0.625, 0.708333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ), Vector2( 11, 0 ), Vector2( 11, -1 ), Vector2( 11, -1 ), Vector2( 11, 0 ) ]
}

[node name="RamEnemy" type="Node2D" groups=["Enemy"]]
script = ExtResource( 1 )
hp = 8.0
speed = 150.0
scoreGain = 500.0
HitSFX = NodePath("Hitbox/HitSFX")
HitSFX_Stream = ExtResource( 4 )
DeadSFX_Stream = ExtResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="HitSFX" type="AudioStreamPlayer" parent="Hitbox"]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="SpriteAnchor" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteAnchor"]
material = ExtResource( 3 )
position = Vector2( 11, 0 )
texture = ExtResource( 2 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteAnchor"]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/idle = SubResource( 4 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
